[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/Layer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level.gd" type="Script" id=2]

[sub_resource type="Environment" id=1]
background_mode = 4

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="Layer1" parent="." instance=ExtResource( 1 )]

[node name="Layer2" parent="." instance=ExtResource( 1 )]

[node name="Layer3" parent="." instance=ExtResource( 1 )]

[node name="Script" type="Node" parent="."]

[node name="PlayerPos" type="Node" parent="."]

[node name="CamLimits" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[editable path="Layer1"]
[editable path="Layer2"]
[editable path="Layer3"]
